tests/negative/function_errors/undefined_function.nano
# Expected Error: Undefined function

fn main() -> int {
    let result: int = (nonexistent_function 42)  # Error: function not defined
    return result
}

shadow main {
    assert (== (main) 0)
}
